minor fix on missing corner on mobile-view

--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -31,6 +31,6 @@ table { width: 100%; line-height: 1.75rem; }
 .table-scroll {
   display: block;
   overflow-x: auto;
-  padding-bottom: 1px;
+  padding-bottom: 10px;
 }
 
